--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <li>Record of service desk activities, resolutions and closing of tickets using the ticket management system.</li>
         <li>Taking of IT Inventory, recording and Processing of the Superior Court equipment</li>
         <li>Support users with the Odyssey System, GA eFiling system, other Curt Technologies</li>
-        <li>Part of the Team maintaining the new Fulton court website></li>
+        <li>Part of the Team maintaining the new Fulton court website</li>
         <li>Updates the weekly schedule for the presiding Judges on the Fultonsuperiorcourtga.gov website </li>
         <li>Manage announcements, manage and update the Judges list by adding and deleting the records as needed.</li>
         <li>Use of Zoom Controller to manage zoom rooms and support Court proceedings  </li>
