--- a/index.html
+++ b/index.html
@@ -22,7 +22,15 @@
     <hr />
      
     <h2>Work Experience</h2>
-    <p> <b>AUGUST 2021-current</b><p>
+    <p> <b>February 2025 - current</b><p>
+        <p>Special Project Coordinator Snr., STATE AND MAGISTRATE COURT OF DEKALB COUNTY
+            </p>
+        <ul>
+            <li>Serve as Technical support for the Superior court Judges and employees seeking technical assistance over the phone, email, or in person in use of Technology to better serve the citizens of Fulton County.</li>
+            <li>Use of Manage Engine Service Desk Plus Ticketing system and Manage Engine Desktop Central to record service desk activities and remote control</li>
+            <li>Record of service desk activities, resolutions and closing of tickets using the ticket management system.</li>
+        </ul>
+    <p> <b>AUGUST 2021-February 2025</b><p>
     <p>INFORMATION SYSTEMS ANALYST III, SUPERIOR COURT ADMINISTRATION OF FULTON COUNTY
         </p>
     <ul>
