--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
         <p>Special Project Coordinator Snr., STATE AND MAGISTRATE COURT OF DEKALB COUNTY
             </p>
         <ul>
-            <li>Serve as Technical support for the Superior court Judges and employees seeking technical assistance over the phone, email, or in person in use of Technology to better serve the citizens of Fulton County.</li>
+           <li>Serve as Technical support for the State court Judges and employees seeking technical assistance over the phone, email, or in person in use of Technology to better serve the citizens of Dekalb County.</li>
             <li>Use of Manage Engine Service Desk Plus Ticketing system and Manage Engine Desktop Central to record service desk activities and remote control</li>
             <li>Record of service desk activities, resolutions and closing of tickets using the ticket management system.</li>
+            <li>Support of the BIS (Audio\Visual) system of the courtrooms</li>
         </ul>
     <p> <b>AUGUST 2021-February 2025</b><p>
     <p>INFORMATION SYSTEMS ANALYST III, SUPERIOR COURT ADMINISTRATION OF FULTON COUNTY
